# python-cellframe

./: .cursorrules  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  API_CHANGES.md  BUILD_PLAN.md  CELLFRAME_SDK_CODE_REVIEW.md  CHANGELOG.md  CMakeLists.txt  CODE_REVIEW_FINDINGS.md  CPackConfig-python-cellframe.cmake  DATUM_DUMP_JSON_MIGRATION_COMPLETE.md  DEAD_CODE_CLEANUP_COMPLETE.md  DOCUMENTATION_INDEX.md  EXECUTIVE_SUMMARY.md  MIGRATION_GUIDE.md  PHASE_10_COMPLETE.md  PHASE_10_PROGRESS_REPORT.md  PHASE_10_VERIFICATION_SUCCESS.md  PHASE_13_COMPLETE.md  PHASE_14_1_COMPLETE.md  PHASE_14_TODO_ELIMINATION_PLAN.md  PHASE_3_5_COMPLETE.md  PROJECT_COMPLETION_SUMMARY.md  PYTHON_CELLFRAME_UPDATE_STATUS.md  README.md  REFACTORING_ROADMAP.md  REVIEW_COMPLETE.md  SECURITY_AUDIT_FINAL_REPORT.md  SECURITY_PATCHES_VERIFICATION_REPORT.md  SLC_ACTUALIZATION_COMPLETE.md  SLC_PHASE_14_ACTUALIZATION_COMPLETE.md  SLC_REVIEW_COMPLETE.md  SLC_TASK_REVIEW_EDITORIAL.md  STUB_CLEANUP_CELLFRAME_SDK.md  TESTING.md  build.sh  build_egg.sh  cellframe.py  (+21 more)
modules/cellframe-sdk/: CMakeLists.txt  setup.py
modules/cellframe-sdk/CellFrame/: python-cellframe.c  wrapping_dap_mempool.c
modules/cellframe-sdk/app-cli/: CMakeLists.txt
modules/cellframe-sdk/chain/: CMakeLists.txt
modules/cellframe-sdk/common/: CMakeLists.txt
modules/cellframe-sdk/gdb/: CMakeLists.txt
modules/cellframe-sdk/global-db/: CMakeLists.txt
modules/cellframe-sdk/include/: python-cellframe.h  wrapping_dap_mempool.h
modules/cellframe-sdk/mempool/: CMakeLists.txt
modules/cellframe-sdk/net/: CMakeLists.txt
modules/cellframe-sdk/wallet/: CMakeLists.txt
modules/dap-sdk-python/core/: CMakeLists.txt
modules/dap-sdk-python/crypto/: CMakeLists.txt  libdap-crypto-python.c
modules/modules/app-cli/: CMakeLists.txt
modules/plugins/: CMakeLists.txt
modules/plugins/include/: dap_chain_plugins.h  dap_chain_plugins_command.h  dap_chain_plugins_list.h  dap_chain_plugins_manifest.h  dap_plugins_python_app_context.h
modules/plugins/src/: dap_chain_plugins.c  dap_chain_plugins_command.c  dap_chain_plugins_list.c  dap_chain_plugins_manifest.c  dap_plugins_python_app_context.c
tests/: CMakeLists.txt  conftest.py  init_test_environment.sh  install_test_modules.sh  pytest.ini  setup_test_env.sh  test_runner_examples.py
tests/core/: test_dap_chain_wallet_python.py  test_libdap-chain-python.py  test_libdap_chain_net_python.py  test_libdap_client_python.py  test_tpo.py  test_wrapping_base64.py  test_wrapping_dap_app_cli_server.py  test_wrapping_dap_chain_common.py  test_wrapping_dap_chain_cs_block.py  test_wrapping_dap_chain_datum.py  test_wrapping_dap_chain_datum_anchor.py  test_wrapping_dap_chain_datum_token.py  test_wrapping_dap_chain_net_node_client.py  test_wrapping_dap_chain_net_srv_client.py  test_wrapping_dap_chain_net_srv_client_remote.py  test_wrapping_dap_chain_net_srv_order.py  test_wrapping_dap_chain_net_srv_xchange_price.py  test_wrapping_dap_chain_tx_in.py  test_wrapping_dap_chain_tx_out_cond_subtype_srv_stake_lock.py  test_wrapping_dap_chain_tx_out_cond_subtype_srv_xchange.py  test_wrapping_dap_chain_tx_out_ext.py  test_wrapping_dap_chain_tx_pkey.py  test_wrapping_dap_chain_tx_receipt.py  test_wrapping_dap_chain_tx_sig.py  test_wrapping_dap_chain_tx_token.py  test_wrapping_dap_chain_tx_token_ext.py  test_wrapping_dap_chain_tx_tsd.py  test_wrapping_dap_client_http.py  test_wrapping_dap_enc_http.py  test_wrapping_dap_enc_key.py  test_wrapping_dap_enc_oaes.py  test_wrapping_dap_hash.py  test_wrapping_dap_http_folder.py  test_wrapping_dap_http_header.py  test_wrapping_dap_http_simple.py  test_wrapping_dap_pkey.py  test_wrapping_dap_sign.py  test_wrapping_dap_stream_ch_chain_validator_test.py  test_wrapping_dap_stream_cluster_role.py  test_wrapping_dap_stream_ctl.py  (+1 more)
tests/e2e/: test_wallet_lifecycle.py
tests/fixtures/: __init__.py  conftest.py  examples.py  mock_factories.py
tests/functional/: test_business_logic.py
tests/integration/: test_cellframe_chain_integration.py  test_integration.py
tests/load/: test_performance_stress.py
tests/regression/: test_api_compatibility.py
tests/security/: test_security_validation.py
tests/services/: test_MyExchangeConf.py  test_dap_plugins_python_app_context.py  test_demoServiceClient.py  test_demoServiceServer.py  test_wrapping_base58.py  test_wrapping_cert.py  test_wrapping_dap_chain_cell.py  test_wrapping_dap_chain_cs.py  test_wrapping_dap_chain_cs_dag.py  test_wrapping_dap_chain_cs_dag_event.py  test_wrapping_dap_chain_cs_dag_round.py  test_wrapping_dap_chain_datum_decree.py  test_wrapping_dap_chain_datum_tx.py  test_wrapping_dap_chain_datum_tx_voting.py  test_wrapping_dap_chain_ledger.py  test_wrapping_dap_chain_net_node.py  test_wrapping_dap_chain_net_node_info.py  test_wrapping_dap_chain_net_srv.py  test_wrapping_dap_chain_net_srv_common.py  test_wrapping_dap_chain_net_srv_stake_pos_delegate.py  test_wrapping_dap_chain_net_srv_vote.py  test_wrapping_dap_chain_net_srv_vote_info.py  test_wrapping_dap_chain_net_srv_xchange.py  test_wrapping_dap_chain_tx_in_cond.py  test_wrapping_dap_chain_tx_out.py  test_wrapping_dap_chain_tx_out_cond.py  test_wrapping_dap_chain_tx_out_cond_subtype_srv_pay.py  test_wrapping_dap_chain_tx_out_cond_subtype_srv_stake.py  test_wrapping_dap_chain_tx_out_std.py  test_wrapping_dap_crypto_key_types.py  test_wrapping_dap_enc_key_type.py  test_wrapping_dap_global_db.py  test_wrapping_dap_global_db_cluster.py  test_wrapping_dap_global_db_obj.py  test_wrapping_dap_global_db_role.py  test_wrapping_dap_mempool.py  test_wrapping_dap_stream.py  test_wrapping_guuid.py  test_wrapping_http.py  test_wrapping_http_status_code.py
tests/unit/composer/: test_conditional_processors.py  test_core.py
tests/unit/core/: test_cellframe_node.py  test_chain_sdk_api.py  test_chain_wrappers.py  test_common_wrappers.py  test_consensus_wrappers.py  test_datum_wrappers.py  test_governance_wrappers.py  test_ledger_wrappers.py  test_mempool_wrappers.py  test_net_balancer_wrappers.py  test_net_channels_cli_wrappers.py  (+10 more)
tests/utils/: __init__.py  test_helpers.py
(+1150 files in other folders)
